[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/GUI/Box.png" type="Texture" id=1]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://art/item sprites/coconut.png" type="Texture" id=3]
[ext_resource path="res://art/Coin/Coin1.png" type="Texture" id=4]
[ext_resource path="res://scripts/ShopItem.gd" type="Script" id=5]

[node name="ShopItem" type="MarginContainer"]
margin_right = 639.0
margin_bottom = 43.0
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 639.0
margin_bottom = 43.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 13
patch_margin_bottom = 20
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Item" type="HBoxContainer" parent="."]
margin_right = 639.0
margin_bottom = 43.0
custom_constants/separation = 0

[node name="ItemImage" type="TextureRect" parent="Item"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 37.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLabel" type="Label" parent="Item"]
margin_left = 32.0
margin_top = 8.0
margin_right = 142.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Coconut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="HBoxContainer" parent="."]
margin_left = 395.0
margin_right = 639.0
margin_bottom = 43.0
size_flags_horizontal = 8
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="HBoxContainer" parent="Price"]
margin_right = 117.0
margin_bottom = 43.0
custom_constants/separation = 0

[node name="BuyPriceLabel" type="Label" parent="Price/Buy"]
margin_top = 8.0
margin_right = 85.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Buy: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinImage" type="TextureRect" parent="Price/Buy"]
margin_left = 85.0
margin_right = 117.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="HBoxContainer" parent="Price"]
margin_left = 132.0
margin_right = 244.0
margin_bottom = 43.0
custom_constants/separation = 0

[node name="SellPriceLabel" type="Label" parent="Price/Sell"]
margin_top = 8.0
margin_right = 80.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Sell: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinImage" type="TextureRect" parent="Price/Sell"]
margin_left = 80.0
margin_right = 112.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_ShopItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ShopItem_mouse_exited"]
[connection signal="gui_input" from="Price/Buy" to="." method="_on_Buy_gui_input"]
[connection signal="mouse_entered" from="Price/Buy" to="." method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="Price/Buy" to="." method="_on_Buy_mouse_exited"]
[connection signal="gui_input" from="Price/Sell" to="." method="_on_Sell_gui_input"]
[connection signal="mouse_entered" from="Price/Sell" to="." method="_on_Sell_mouse_entered"]
[connection signal="mouse_exited" from="Price/Sell" to="." method="_on_Sell_mouse_exited"]
